# Flask_SQLAlchemy_Project_Template

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
Flask_SQLAlchemy_Project_Template/: __init__.py  __main__.py  database.py  models.py
Flask_SQLAlchemy_Project_Template/routes_internal/: routes.py  routes_support.py
Flask_SQLAlchemy_Project_Template/routes_internal/internal_templates/: internal_bp_content.html
Flask_SQLAlchemy_Project_Template/routes_user/: routes.py  routes_support.py
Flask_SQLAlchemy_Project_Template/routes_user/user_static/: README.md.html
Flask_SQLAlchemy_Project_Template/routes_user/user_templates/: user_bp_content.html  user_bp_index.html
