[build-system]
requires = ["setuptools >= 42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Flask_SQLAlchemy_Project_Template"
version = "1.5.3"
description = "Ready to grow Flask SQLAlchemy basic template, Blueprints and application factory."
keywords = ['Flask SQLAlchemy template', 'Flask Blueprints and application factory']
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
authors = [{name = "René Horn", email = "rene_horn@gmx.net" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable"
]
dependencies = [
    "Flask==2.2.3",
    "flask-sqlalchemy==3.0.3"
]

[project.scripts]

[project.urls]
homepage = "https://github.com/44xtc44"
repository = "https://github.com/44xtc44/Flask_SQLAlchemy_Project_Template"

[tool.pytest.ini_options]
addopts = "--cov=."
testpaths = "."
